# wav-jepa

./: .gitignore  .syncr.toml  .syncrignore  README.md  check_fe.py  pyproject.toml  test.py  train_ctc.py  verify.py  verify.sh
config/: config_base.yaml
wjepa/: __main__.py  loss.py  run.py  train.py  utils.py
wjepa/data/: __init__.py  dataset.py  sampler.py
wjepa/masks/: __init__.py  collator.py  distance.py
wjepa/models/: __init__.py  encoder.py  feature_extractor.py  modules.py  patch_embed.py  predictor.py  utils.py  wrappers.py
wjepa/src/: __init__.py
wjepa/tests/: __init__.py  test_models.py
