[project]
name = "wjepa"
version = "0.1.0"
description = "W-JEPA (Waveformer JEPA) pre-training framework for audio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
    "timm>=1.0.26",
    "torch>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "yapf>=0.32.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wjepa*"]

[tool.pytest.ini_options]
testpaths = ["wjepa/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.flake8]
max-line-length = 100
exclude = [".venv", "build", "dist"]
